--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
   "name": "idearia/activecampaign-v3-php",
   "description": "PHP Wrapper for ActiveCampaign",
   "require": {
-    "guzzlehttp/guzzle": "^7.0"
+    "guzzlehttp/guzzle": "^7.0",
+    "gmponos/guzzle_logger": "^2.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^7"
