--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "description": "PHP Wrapper for ActiveCampaign",
   "require": {
     "guzzlehttp/guzzle": "^7.0",
-    "gmponos/guzzle_logger": "dev-master"
+    "gmponos/guzzle_logger": "^2.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5"
