--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "gmponos/guzzle_logger": "^2.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.5"
+    "phpunit/phpunit": "^9.5",
+    "phpstan/phpstan": "^1.8"
   },
   "license": "MIT",
   "authors": [
@@ -24,5 +25,8 @@
     "psr-4": {
       "Mediatoolkit\\Tests\\": "tests/"
     }
+  },
+  "scripts": {
+    "phpstan": "phpstan analyse"
   }
 }
